# programming-principles-assessment-2

./: CMakeLists.txt  huffman_friendly_test.py  rle_friendly_test.py
algorithms/: RLE.cpp  RLE.h  algorithmFactory.cpp  algorithmFactory.h  compressionAlgorithm.h  huffman.cpp  huffman.h
common/: messageTypes.h  networkUtils.cpp  networkUtils.h
file/: fileHandler.cpp  fileHandler.h
server/: main_server.cpp  server.cpp  server.h  workerthread.cpp  workerthread.h
src/: client.cpp  client.h  main_client.cpp  request.cpp  request.h  response.cpp  response.h
tests/: test_fileHandler.cpp  test_huffman.cpp  test_rle.cpp
utils/: config.h  logger.cpp  logger.h
